--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,7 +13,8 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
-    "mysql2": "^3.9.1",
+    "mysql2": "^3.9.2",
+    "nodemon": "^3.1.0",
     "util": "^0.12.5"
   }
 }
